# threadscopeRestServer

./: threadscopeRestServer.cabal
src/: Lib.hs
src/Events/: ReadEvents.hs  SparkTree.hs
