name:                threadscopeRestServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/threadscopeRestServer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , binary
                     , array
                     , mtl
                     , filepath
                     , ghc-events
                     , containers >= 0.2 && <0.6
                     , deepseq >=1.1
                     , text
                     , time >= 1.1
  default-language:    Haskell2010
  Extensions: RecordWildCards, NamedFieldPuns, BangPatterns, PatternGuards
  Other-Modules:     Events.HECs,
                     Events.EventDuration
                     Events.EventTree,
                     Events.ReadEvents,
                     Events.SparkStats,
                     Events.SparkTree,
                     Events.TestEvents
executable threadscopeRestServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , threadscopeRestServer
  default-language:    Haskell2010

test-suite threadscopeRestServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , threadscopeRestServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dchagniot/threadscopeRestServer
